Fix Routine bugs
